db calls added functional insert statements

--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -91,8 +91,8 @@
     "        for song_number in range(0,19):\n",
     "            counter += 1 \n",
     "            song_id = results['items'][song_number]['track']['id']\n",
-    "            artist_id = sd.get_artist_id(song_id)\n",
-    "            genre = sd.get_genres(artist_id)\n",
+    "            artist_id = self.get_artist_id(song_id)\n",
+    "            genre = self.get_genres(artist_id)\n",
     "            if genre != []:\n",
     "                break\n",
     "        return song_id\n",
