--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQD0Mg1tGefC-uhH9A4MvF7O6ZkZNZCoAOJMJchJPldflgZ6qktAxUFTy91Yf4MxPMvWheNSOsKrLN7YJpBIyH6JAQJrcwyBPHRLHKjRuRRkHSbDOpkqCuqlPXjyOWcqj11EsB9ikycKmEGMTdma8KYtSIwJJ42siaDK9GQQ_7kZ'"
+       "'BQDN5qESdvaWZ0NyIbDiloX5aarwKPrkg44xb0mwHzPNEHRqaeUI4VY_-ATXb6nYbdmsK_tfAeFxONR9R3DXb5DijzwEFJMQah-9cZx6WAGCxM3dOzVkUZn4vE-iTc5BVhLJuwMdnCg7oM_ybpGo67PbBqZDcnwsrilWMfFvBt9fqczks2IHX4Z2tr4UehkH_t8J1RlTMQ'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQD0Mg1tGefC-uhH9A4MvF7O6ZkZNZCoAOJMJchJPldflgZ6qktAxUFTy91Yf4MxPMvWheNSOsKrLN7YJpBIyH6JAQJrcwyBPHRLHKjRuRRkHSbDOpkqCuqlPXjyOWcqj11EsB9ikycKmEGMTdma8KYtSIwJJ42siaDK9GQQ_7kZ'"
+       "'BQDN5qESdvaWZ0NyIbDiloX5aarwKPrkg44xb0mwHzPNEHRqaeUI4VY_-ATXb6nYbdmsK_tfAeFxONR9R3DXb5DijzwEFJMQah-9cZx6WAGCxM3dOzVkUZn4vE-iTc5BVhLJuwMdnCg7oM_ybpGo67PbBqZDcnwsrilWMfFvBt9fqczks2IHX4Z2tr4UehkH_t8J1RlTMQ'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spotipy.client.Spotify at 0x117c8c1d0>"
+       "<spotipy.client.Spotify at 0x1360df810>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('augt12ocf9csxa4s8kbq9reg8', 'Xander')"
+       "('basslaughter', 'Zhenya Warshavsky')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,10 +330,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1WbwlYiiMZGQlrFGirRnHv'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_song_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/user/.local/share/virtualenvs/unique-song-reqs-Bk3t-qK-/lib/python3.7/site-packages/ipykernel_launcher.py:60: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaling data...\n",
+      "Loading pickled model...\n",
+      "results returned\n",
+      "filter for genres initiated\n",
+      "filter found at least 20 genre matches\n",
+      "filtered list with 20 unique song indices returned\n",
+      "song_id_list loading...\n",
+      "song_id_list loaded\n",
+      "Results returned\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'songs': [{'similarity': [0.99], 'values': '2C1FzUUtHp31ZdQsTGDM2f'},\n",
+       "  {'similarity': [0.99], 'values': '1NVsdk9Z0xNG2sUhZmkbD0'},\n",
+       "  {'similarity': [0.99], 'values': '5SwPRje7oQV5RP0saxoZp8'},\n",
+       "  {'similarity': [0.99], 'values': '5RrWu7ddslbnrRImeW7LOs'},\n",
+       "  {'similarity': [0.99], 'values': '0FQjfJB4cdkVfxZHz8RV4M'},\n",
+       "  {'similarity': [0.99], 'values': '6PF0WYSCH6OhGKHRHOQSxG'},\n",
+       "  {'similarity': [0.99], 'values': '6vEAyRqugkWBfQpccdiWFU'},\n",
+       "  {'similarity': [0.99], 'values': '7g7aNOC904ne2PUc14Xevb'},\n",
+       "  {'similarity': [0.99], 'values': '4jJwm24UagUP51wTp657Xp'},\n",
+       "  {'similarity': [0.99], 'values': '6roY6Z2b0Q7DH3ZM4SRoTz'},\n",
+       "  {'similarity': [0.99], 'values': '5wmn1zWhSSDLUmLLwYO9Rj'},\n",
+       "  {'similarity': [0.99], 'values': '34tFidHrETMAjsiK87WVVW'},\n",
+       "  {'similarity': [0.99], 'values': '0rUyA7P4nPKCRVvKhFo7XL'},\n",
+       "  {'similarity': [0.99], 'values': '5i2859ZJXGPOzDwdZSOMiH'},\n",
+       "  {'similarity': [0.99], 'values': '3QOQEObqJvCi4M2SNeko7V'},\n",
+       "  {'similarity': [0.99], 'values': '2raNLL2FWxWNA4veLZIuAj'},\n",
+       "  {'similarity': [0.99], 'values': '5UORiENC2iuNTFWopBTJKV'},\n",
+       "  {'similarity': [0.99], 'values': '4vTZpkN2Ri8Lfk2149NqWC'},\n",
+       "  {'similarity': [0.99], 'values': '56RfNBJGUgL1ZFCB1KEJrQ'},\n",
+       "  {'similarity': [0.99], 'values': '2jw0Fejobu4pxfJ1RRNT4W'}]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sd = Sound_Drip(token)\n",
+    "sp = sd.instantiate_sp(token)\n",
+    "song_id = sd.get_user_song_id(sp)\n",
+    "acoustical_features = sd.get_acoustical_features(song_id, sp)\n",
+    "popularity = sd.get_popularity(song_id)\n",
+    "song_features_df = sd.create_feature_object(popularity, acoustical_features)\n",
+    "results = sd.get_results(song_features_df)\n",
+    "source_genre = sd.get_genres(sd.get_artist_id(song_id))\n",
+    "filtered_list = sd.filter_model(results,source_genre)\n",
+    "sd.song_id_prediction_output(filtered_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "song_id_list loading...\n",
+      "song_id_list loaded\n",
+      "Results returned\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_result = sd.song_id_prediction_output(filtered_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2C1FzUUtHp31ZdQsTGDM2f',\n",
+       " '1NVsdk9Z0xNG2sUhZmkbD0',\n",
+       " '5SwPRje7oQV5RP0saxoZp8',\n",
+       " '5RrWu7ddslbnrRImeW7LOs',\n",
+       " '0FQjfJB4cdkVfxZHz8RV4M',\n",
+       " '6PF0WYSCH6OhGKHRHOQSxG',\n",
+       " '6vEAyRqugkWBfQpccdiWFU',\n",
+       " '7g7aNOC904ne2PUc14Xevb',\n",
+       " '4jJwm24UagUP51wTp657Xp',\n",
+       " '6roY6Z2b0Q7DH3ZM4SRoTz',\n",
+       " '5wmn1zWhSSDLUmLLwYO9Rj',\n",
+       " '34tFidHrETMAjsiK87WVVW',\n",
+       " '0rUyA7P4nPKCRVvKhFo7XL',\n",
+       " '5i2859ZJXGPOzDwdZSOMiH',\n",
+       " '3QOQEObqJvCi4M2SNeko7V',\n",
+       " '2raNLL2FWxWNA4veLZIuAj',\n",
+       " '5UORiENC2iuNTFWopBTJKV',\n",
+       " '4vTZpkN2Ri8Lfk2149NqWC',\n",
+       " '56RfNBJGUgL1ZFCB1KEJrQ',\n",
+       " '2jw0Fejobu4pxfJ1RRNT4W']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_list = []\n",
+    "for song in final_result[\"songs\"]:\n",
+    "    song_list.append((song[\"values\"]))\n",
+    "    \n",
+    "song_list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,17 +489,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reconnect():\n",
+    "def connect():\n",
     "    conn = ps.connect(host=POSTGRES_ADDRESS,\n",
-    "                  database=POSTGRES_DBNAME,\n",
-    "                  user=POSTGRES_USERNAME,\n",
-    "                  password=POSTGRES_PASSWORD,\n",
-    "                  port=POSTGRES_PORT)\n",
-    "    cur = conn.cursor()"
+    "              database=POSTGRES_DBNAME,\n",
+    "              user=POSTGRES_USERNAME,\n",
+    "              password=POSTGRES_PASSWORD,\n",
+    "              port=POSTGRES_PORT)\n",
+    "    cur = conn.cursor()\n",
+    "    return conn,cur"
    ]
   },
   {
@@ -382,20 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# query = \"\"\"SELECT * FROM users\n",
-    "#             WHERE schemaname != 'pg_catalog'\n",
-    "#             AND schemaname != 'information_schema';\"\"\"\n",
-    "# cur.execute(query)\n",
-    "# cur.fetchall()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +537,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +560,7 @@
        "[]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,13 +574,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ewfjhewjfhewjhfew'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'ewfjhewjfhewjhfew'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cur.execute(\"\"\"DROP TABLE users;\"\"\")\n",
+    "# conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#deciding to remove users table as it is redundant \n",
+    "\n",
     "# cur.execute(\"\"\"CREATE TABLE users\n",
-    "#                 (ID integer, \n",
-    "#                 display_name varchar(50)\n",
+    "#                 (id serial PRIMARY KEY, \n",
+    "#                 display_name varchar(50),\n",
+    "#                 userID varchar(50)\n",
     "#                 );\"\"\")\n",
     "# # Commit table creation\n",
     "# conn.commit()"
@@ -455,35 +621,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"\"\"CREATE TABLE recommendations\n",
-    "                (id serial PRIMARY KEY,\n",
-    "                userID varchar(50), \n",
-    "                songID varchar(50),\n",
-    "                recDate DATE \n",
-    "                )\"\"\")\n",
-    "# Commit table creation\n",
+    "# cur.execute(\"\"\"CREATE TABLE recommendations\n",
+    "#                 (id serial PRIMARY KEY,\n",
+    "#                 userID varchar(50), \n",
+    "#                 songID varchar(50),\n",
+    "#                 recDate DATE \n",
+    "#                 )\"\"\")\n",
+    "# # Commit table creation\n",
+    "# conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query = \"\"\"SELECT * FROM users\n",
+    "#             WHERE schemaname != 'pg_catalog'\n",
+    "#             AND schemaname != 'information_schema';\"\"\"\n",
+    "# cur.execute(query)\n",
+    "# cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'basslaughter'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1WbwlYiiMZGQlrFGirRnHv'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2C1FzUUtHp31ZdQsTGDM2f',\n",
+       " '1NVsdk9Z0xNG2sUhZmkbD0',\n",
+       " '5SwPRje7oQV5RP0saxoZp8',\n",
+       " '5RrWu7ddslbnrRImeW7LOs',\n",
+       " '0FQjfJB4cdkVfxZHz8RV4M',\n",
+       " '6PF0WYSCH6OhGKHRHOQSxG',\n",
+       " '6vEAyRqugkWBfQpccdiWFU',\n",
+       " '7g7aNOC904ne2PUc14Xevb',\n",
+       " '4jJwm24UagUP51wTp657Xp',\n",
+       " '6roY6Z2b0Q7DH3ZM4SRoTz',\n",
+       " '5wmn1zWhSSDLUmLLwYO9Rj',\n",
+       " '34tFidHrETMAjsiK87WVVW',\n",
+       " '0rUyA7P4nPKCRVvKhFo7XL',\n",
+       " '5i2859ZJXGPOzDwdZSOMiH',\n",
+       " '3QOQEObqJvCi4M2SNeko7V',\n",
+       " '2raNLL2FWxWNA4veLZIuAj',\n",
+       " '5UORiENC2iuNTFWopBTJKV',\n",
+       " '4vTZpkN2Ri8Lfk2149NqWC',\n",
+       " '56RfNBJGUgL1ZFCB1KEJrQ',\n",
+       " '2jw0Fejobu4pxfJ1RRNT4W']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn, cur = connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for song_id in song_list:\n",
+    "    cur.execute(\n",
+    "        f'INSERT INTO recommendations'\n",
+    "        f'(userid,songid,recdate)'\n",
+    "        f' VALUES (\\'{user_id}\\',\\'{song_id}\\',current_timestamp);')\n",
     "conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"\"\"CREATE TABLE account(\n",
-    "               user_id serial PRIMARY KEY,\n",
-    "               username VARCHAR (50) UNIQUE NOT NULL,\n",
-    "               password VARCHAR (50) NOT NULL,\n",
-    "               email VARCHAR (355) UNIQUE NOT NULL,\n",
-    "               created_on TIMESTAMP NOT NULL,\n",
-    "               last_login TIMESTAMP\n",
-    "               );\"\"\")\n",
-    "# Commit table creation\n",
+    "cur.execute(\n",
+    "        f'INSERT INTO users'\n",
+    "        f'(display_name,userid)'\n",
+    "        f' VALUES (\\'{display_name}\\',\\'{user_id}\\');')\n",
     "conn.commit()"
    ]
   },
@@ -493,9 +769,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute(\"\"\"CREATE TABLE survival(\n",
-    "id SERIAL PRIMARY KEY,\n",
-    "survived integer)\"\"\")"
+    "insertstatement1 {songid_lis[0]}\n",
+    "insertstatement1 {songid_lis[1]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(f'INSERT INTO users (songid, artist, track) VALUES (\\\"{f[\"songid\"]}\\\",\\\"{f[\"artist\"]}\\\",\\\"{f[\"track\"]}\\\", {f[\"danceability\"]}, {f[\"energy\"]}, {f[\"key\"]}, {f[\"loudness\"]}, {f[\"mode\"]}, {f[\"speechiness\"]}, {f[\"acousticness\"]},  {f[\"instrumentalness\"]}, {f[\"liveness\"]}, {f[\"valence\"]}, {f[\"tempo\"]}, {f[\"duration_ms\"]},{f[\"time_signature\"]});')"
    ]
   }
  ],
