updating flask code

--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -82,23 +82,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def reconnect():\n",
-    "#     # create connection and cursor    \n",
-    "#     conn = ps.connect(host=POSTGRES_ADDRESS,\n",
-    "#                       database=POSTGRES_DBNAME,\n",
-    "#                       user=POSTGRES_USERNAME,\n",
-    "#                       password=POSTGRES_PASSWORD,\n",
-    "#                       port=POSTGRES_PORT)\n",
-    "#     cur = conn.cursor()\n",
-    "#     return cur"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [],
@@ -439,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +450,7 @@
        " '2jw0Fejobu4pxfJ1RRNT4W']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +458,7 @@
    "source": [
     "song_list = []\n",
     "for song in final_result[\"songs\"]:\n",
-    "    song_list.append((song[\"values\"]))\n",
+    "    song_list.append((((song[\"values\"]))))\n",
     "    \n",
     "song_list"
    ]
