updating with db notebook code

--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -725,6 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#only insert statement that we're using\n",
     "for song_id in song_list:\n",
     "    cur.execute(\n",
     "        f'INSERT INTO recommendations'\n",
@@ -739,11 +740,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\n",
-    "        f'INSERT INTO users'\n",
-    "        f'(display_name,userid)'\n",
-    "        f' VALUES (\\'{display_name}\\',\\'{user_id}\\');')\n",
-    "conn.commit()"
+    "# cur.execute(\n",
+    "#         f'INSERT INTO users'\n",
+    "#         f'(display_name,userid)'\n",
+    "#         f' VALUES (\\'{display_name}\\',\\'{user_id}\\');')\n",
+    "# conn.commit()"
    ]
   },
   {
