updated AWS Flask app
Co-Authored-By: zwarshavsky <zwarshavsky@users.noreply.github.com>
Co-Authored-By: Xander Bennett <xander-bennett@users.noreply.github.com>

--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "USERNAME = USERNAME #your spotify username\n",
-    "CLIENT_ID = CLIENT_ID #set at your developer account\n",
-    "CLIENT_SECRET = CLIENT_SECRET #set at your developer account\n",
-    "REDIRECT_URI = 'http://google.com/' #set at your developer account, usually \"http://localhost:8000\"\n",
-    "SCOPE = 'user-library-read' # or else\n",
+    "# USERNAME = USERNAME #your spotify username\n",
+    "# CLIENT_ID = CLIENT_ID #set at your developer account\n",
+    "# CLIENT_SECRET = CLIENT_SECRET #set at your developer account\n",
+    "# REDIRECT_URI = 'http://google.com/' #set at your developer account, usually \"http://localhost:8000\"\n",
+    "# SCOPE = 'user-library-read' # or else\n",
     "# ps. REDIRECT_URI is crucial here. if http://localhost:8000 is not set, or with a single '/' misplaced, it will generate a connection error.\n",
     "\n",
     "# then pass them:\n",
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQBZ68xAlrlWsIf97UmLv8II68jXfUj3HLLMCiYLoRUtLWLmTKIG_ali-5aWFuq7L0393V0uij2YJQSvaxiuz9iSi9wCLuOcQeSd8E_NGiJyk3XOUAxjrKY8FC_r89NcoKxAxtTigtpes04zeR11n8khP2OwVN9flGyPl5P97HyPte1uVHHN6PVGRDt1PQF6QFoIcY45pA'"
+       "'BQC_S4NS30egRYIuc5-sX-kOKdy8z_S1E8_a8Oo00w6amgbJIUA8TWnvI2qa7qIuVBobr8cLPO9hBQkFndcpD0EBM0gMsttGtZxgrvPfmoFd3AlmjVS2hwPo_8RhwxW4w3CBB_Uqki1g7GuUIswftVz68yQS0XNQcUoo6l57fIZt1gqBfA9A4WNGKadUHlCb2_Ap2aeT_g'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,9 +1071,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Flask_notebooks",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "flask_notebooks"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
