added updates to flask app and staging notebook
Co-Authored-By: Xander Bennett <xander-bennett@users.noreply.github.com>
Co-Authored-By: Riley Pence <fuse999@users.noreply.github.com>

--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "module"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "<module 'SD_mod' from '/Users/user/Documents/GitHub/Lambda/labs/Music-Meteorologist-ds/Flask_notebooks/SD_mod.py'>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQBIACscTiLM5akI871t4mUwqjtcrGmkAo5ZsDpdLdgPPwePNVieMY3XFSpYBvXx_uCNvcfP486kZEq9Tm6MWvDM6WQAPLHVmw60FN_hRBhiiwY-z-IXzuEJgjAJV6XTtzqR7OD1eKWJ03NO6lkAVd71Yd2OfOyJRZuTLzCxgm_gywd0s3EqmgSIOXO5Z5NcREjKQS_pNA'"
+       "'BQBaQvt5nNhCaeC1HNqY-F-8Uox2zkB0DgsavJm-GbUkQKtkMF8uGIIKEkvRieyvibr49zzeib6M7k_Bij7inUi2Q5PltuX60y6hO7hL7sUL1KbcjAZQfGXih6MMwV0lsg1FMf2Bi_OMEV9ON59P-jvmz0kM4DRGJdd1dztZaSrpQVr_Rk6k8xWq9uDUqWAgHANHuPU9TA'"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token = 'BQCrvSl2xcEuIcomgB0rj7l0hHpxUHrmYIKuwZ5hl5ZhjfBag63UZTn6zQU94jnVqwln74jYSj-W-NbEmdKjmUk4TdBEI5k9e3VXc821rjt5x8yxcy0d0BwN2Fvb5kTdr-WcJUh6L01xlKm98LM7phxOcJYlbw'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -278,11 +287,26 @@
      "output_type": "stream",
      "text": [
       "retrieving user id and display name for current token\n",
+      "['5E5kHXR820ZE1Tv4NgcRpb', '0VmNuYiwoI21vKJwgzxZMw', '4eYaDRhiL5iesFp2EuoODr', None, '3ZTlVHzTAzcBxrLQuEPb0u', '1YBkXyn1nlp2SdCdsNkGtS', '3AAwJ043uT1wXSKDtGyuxF']\n",
+      "5\n",
+      "0\n",
+      "3AAwJ043uT1wXSKDtGyuxF\n",
+      "1\n",
+      "15VQzotNvOlrURjpzNfByJ\n",
+      "artist_id: 7Bx0qiG4t9Ewq8NyPDtxab\n",
+      "2\n",
+      "2Pan3RlcjS43Yck4LrXBQ1\n",
+      "artist_id: 1xgCilwCIEuDwK6P1DzNKH\n",
+      "3\n",
+      "7lSNZV9U8D7BnzwTIM8zlG\n",
+      "artist_id: 4Mp7yETSzhsOZt0lm4TaRu\n",
+      "the genre is: ['afrobeat', 'classic afrobeat']\n",
       "Scaling data...\n",
       "Loading pickled model...\n",
       "results returned\n",
+      "['afrobeat', 'classic afrobeat']\n",
       "filter for genres initiated\n",
-      "40 stale tracks were removed for the user\n",
+      "126 stale tracks were removed for the user\n",
       "filter found at least 20 genre matches\n",
       "filtered list with 20 unique song indices returned\n",
       "song_id_list loading...\n",
@@ -293,6 +317,8 @@
     }
    ],
    "source": [
+    "importlib.reload(SD_mod)\n",
+    "from SD_mod import *\n",
     "sd_obj = Sound_Drip(token)"
    ]
   },
@@ -320,11 +346,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, '1WbwlYiiMZGQlrFGirRnHv']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sd_obj.insert_user_predictions()"
+    "sd_obj.get_stale_seed()"
    ]
   },
   {
@@ -375,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,15 +476,6 @@
    ],
    "source": [
     "user_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn,cur = sd_obj.db_connect()"
    ]
   },
   {
@@ -554,11 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"DELETE FROM recommendations;\"\"\"\n",
+    "conn,cur = sd_obj.db_connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"DELETE FROM recommendations WHERE userid = 'basslaughter' OR userid = 'rileypence4';\"\"\"\n",
     "\n",
     "cur.execute(query)\n",
     "# cur.fetchall()\n",
@@ -567,16 +604,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefinedObject",
+     "evalue": "constraint \"recommendations_id\" of relation \"recommendations\" does not exist\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUndefinedObject\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-51225a765b80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mquery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\"ALTER TABLE recommendations DROP CONSTRAINT recommendations_id;\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# conn.close()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUndefinedObject\u001b[0m: constraint \"recommendations_id\" of relation \"recommendations\" does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"\"\"ALTER TABLE recommendations DROP CONSTRAINT recommendations_id;\"\"\"\n",
+    "cur.execute(query)\n",
+    "conn.commit()\n",
+    "# conn.close()\n",
+    "\n",
+    "# ALTER TABLE recommendations DROP CONSTRAINT id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "query = \"\"\"ALTER SEQUENCE recommendations_id_seq RESTART WITH 1;\"\"\"\n",
-    "\n",
-    "cur.execute(query)\n",
-    "# cur.fetchall()\n",
-    "conn.commit()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
