updated genre filter method

--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -287,27 +287,31 @@
      "output_type": "stream",
      "text": [
       "retrieving user id and display name for current token\n",
-      "['5E5kHXR820ZE1Tv4NgcRpb', '0VmNuYiwoI21vKJwgzxZMw', '4eYaDRhiL5iesFp2EuoODr', None, '3ZTlVHzTAzcBxrLQuEPb0u', '1YBkXyn1nlp2SdCdsNkGtS', '3AAwJ043uT1wXSKDtGyuxF']\n",
+      "['5E5kHXR820ZE1Tv4NgcRpb', '3AAwJ043uT1wXSKDtGyuxF', '7lSNZV9U8D7BnzwTIM8zlG']\n",
       "5\n",
       "0\n",
       "3AAwJ043uT1wXSKDtGyuxF\n",
       "1\n",
       "15VQzotNvOlrURjpzNfByJ\n",
       "artist_id: 7Bx0qiG4t9Ewq8NyPDtxab\n",
+      "[]\n",
       "2\n",
       "2Pan3RlcjS43Yck4LrXBQ1\n",
       "artist_id: 1xgCilwCIEuDwK6P1DzNKH\n",
+      "[]\n",
       "3\n",
       "7lSNZV9U8D7BnzwTIM8zlG\n",
-      "artist_id: 4Mp7yETSzhsOZt0lm4TaRu\n",
-      "the genre is: ['afrobeat', 'classic afrobeat']\n",
+      "4\n",
+      "5E5kHXR820ZE1Tv4NgcRpb\n",
+      "the genre is: ['middle earth']\n",
       "Scaling data...\n",
       "Loading pickled model...\n",
       "results returned\n",
-      "['afrobeat', 'classic afrobeat']\n",
+      "['middle earth']\n",
       "filter for genres initiated\n",
-      "126 stale tracks were removed for the user\n",
-      "filter found at least 20 genre matches\n",
+      "80 stale tracks were removed for the user\n",
+      "length of filtered list: 0\n",
+      "need to add 20 items to final song output\n",
       "filtered list with 20 unique song indices returned\n",
       "song_id_list loading...\n",
       "song_id_list loaded\n",
@@ -582,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,11 +595,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"DELETE FROM recommendations WHERE userid = 'basslaughter' OR userid = 'rileypence4';\"\"\"\n",
+    "query = \"\"\"DELETE FROM recommendations WHERE userid = 'rileypence4';\"\"\"\n",
     "\n",
     "cur.execute(query)\n",
     "# cur.fetchall()\n",
